QtWebKit/gen_qwebfullscreenrequest.h

class QUrl;
class QWebElement;
class QWebFullScreenRequest;
typedef struct QUrl QUrl;
typedef struct QWebElement QWebElement;
typedef struct QWebFullScreenRequest QWebFullScreenRequest;
QWebFullScreenRequest* QWebFullScreenRequest_new();
QWebFullScreenRequest* QWebFullScreenRequest_new2(QWebFullScreenRequest* param1);
void QWebFullScreenRequest_accept(QWebFullScreenRequest* self);
void QWebFullScreenRequest_reject(QWebFullScreenRequest* self);
bool QWebFullScreenRequest_toggleOn(const QWebFullScreenRequest* self);
QUrl* QWebFullScreenRequest_origin(const QWebFullScreenRequest* self);
QWebElement* QWebFullScreenRequest_element(const QWebFullScreenRequest* self);
void QWebFullScreenRequest_delete(QWebFullScreenRequest* self);